--- a/index.html
+++ b/index.html
@@ -1277,6 +1277,13 @@ font-size: .5em
 <li>Different levels of period (e.g.HAND01/HAND05)</li>
 <li>Correlation between services and recipients (e.g. HAND01/HAND07)</li>
 </ul>
+</section>
+<section id="services-and-recipients-hand0107" class="slide level2">
+<h2>Services and recipients (HAND01/07)</h2>
+<ul>
+<li>27.5% non-zeros elements where service = recipients</li>
+<li>34.5% nonzero elements where service is an integer (service %% 1 == 0)</li>
+</ul>
 <div class="footer footer-default">
 
 </div>
